fix external link overflow

--- a/frontend/src/components/links/ExternalLink.module.scss
+++ b/frontend/src/components/links/ExternalLink.module.scss
@@ -13,6 +13,8 @@
     fill: $blue;
   }
   .url {
-    word-break: break-all;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
